# mail

./: README.md
mail_activity_board/: README.rst  __manifest__.py
mail_activity_board/models/: mail_activity.py
mail_activity_board/tests/: test_mail_activity_board.py
mail_activity_board/views/: mail_activity_view.xml
mail_activity_done/: README.rst  __manifest__.py  hooks.py
mail_activity_done/i18n/: mail_activity_done.pot
mail_activity_done/models/: __init__.py  mail_activity_type.py
mail_activity_done/readme/: CONTRIBUTORS.md  DESCRIPTION.md  USAGE.md
mail_activity_done/tests/: test_mail_activity_done.py
mail_attach_existing_attachment/: README.rst  __manifest__.py
mail_attach_existing_attachment/i18n/: it.po
mail_attach_existing_attachment/readme/: CONTRIBUTORS.md
mail_attach_existing_attachment/tests/: test_mail_attach_existing_attachment.py
mail_autosubscribe/: README.rst  __manifest__.py
mail_autosubscribe/i18n/: ca.po  de.po  es.po  it.po
mail_autosubscribe/models/: mail_template.py
mail_autosubscribe/readme/: CONTRIBUTORS.md
mail_autosubscribe/tests/: test_mail_autosubscribe.py
mail_autosubscribe/views/: mail_autosubscribe.xml  mail_template.xml  res_partner.xml
mail_composer_cc_bcc/: README.rst  __manifest__.py
mail_composer_cc_bcc/models/: ir_mail_server.py  mail_mail.py  mail_template.py  mail_thread.py
mail_composer_cc_bcc/readme/: CREDITS.md  DESCRIPTION.md
mail_force_email_notification/: README.rst  __manifest__.py
mail_quoted_reply/: README.rst  __manifest__.py
setup/_metapackage/: pyproject.toml
(+34 files in other folders)
